--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
 	    <artifactId>themoviedbapi</artifactId>
 	    <version>1.6</version>
 	</dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.6</version>
+        </dependency>
     </dependencies>
 
     <build>
