--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,17 @@
 	      </snapshots>
 	      <id>central</id>
 	      <name>bintray</name>
-	      <!--<url>https://jcenter.bintray.com</url>-->
-              <url>http://repo1.maven.org/maven2</url>
+	      <url>https://jcenter.bintray.com</url>
+              <!--<url>http://repo1.maven.org/maven2</url>-->
 	  </repository>
   </repositories>
     <dependencies>
+        <dependency>
+            <groupId>org.codehaus.jettison</groupId>
+            <artifactId>jettison</artifactId>
+            <version>1.1</version>
+            <type>jar</type>
+        </dependency>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
