- Ya se guardan las valoraciones en DB. - Se puede cambiar el método de recomendación y se guarda en DB. - Falta implementar el cambio (las nuevas películas a mostrar) en LoginServlet y MetodoServlet.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -31,6 +31,14 @@
         <servlet-name>RateMovieServlet</servlet-name>
         <servlet-class>servlets.RateMovieServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>SaveRatingServlet</servlet-name>
+        <servlet-class>servlets.SaveRatingServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>MetodoServlet</servlet-name>
+        <servlet-class>servlets.MetodoServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>RegistroServlet</servlet-name>
         <url-pattern>/RegistroServlet</url-pattern>
@@ -59,9 +67,17 @@
         <servlet-name>RateMovieServlet</servlet-name>
         <url-pattern>/RateMovieServlet</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SaveRatingServlet</servlet-name>
+        <url-pattern>/SaveRatingServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>MetodoServlet</servlet-name>
+        <url-pattern>/MetodoServlet</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
-            30
+            300
         </session-timeout>
     </session-config>
 </web-app>
